charts/rugex/website/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rgx-website-deployment
  labels:
    app: rgx-website
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      run: rgx-website-runner
  template:
    metadata:
      labels:
        run: rgx-website-runner
    spec:
      containers:
        - name: rgx-website
          image: simbleau/website:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            # Start readyness checks after 10s
            initialDelaySeconds: 10
            # 5 min to startup (30 * 10 = 300s)
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 1
            periodSeconds: 10
