charts/rugex/website/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rgx-website-svc
spec:
  selector:
    run: rgx-website-runner
  ports:
    - protocol: TCP
      port: 80
