charts/rugex/website/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: rugex.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website-svc
                port:
                  number: 80
